--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <script src="./static/js/index.js"></script>
 </head>
 <body>
-
+<!-- 
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
@@ -80,7 +80,7 @@
     </div>
 
   </div>
-</nav>
+</nav> -->
 
 
 <section class="hero">
@@ -104,10 +104,10 @@
               <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>1</sup>,
             </span> -->
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Chengfeng Hou</a><sup>1</sup>,
+              Chengfeng Hou<sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Ziping Yu</a><sup>1</sup>
+              Ziping Yu<sup>1</sup>
             </span>
           </div>
 
